-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fed2c8eda63, pid=407269, tid=407270
#
# JRE version: (20.0) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-09-01-0715344.tobias..., mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x195ca63] AdapterHandlerEntry::~AdapterHandlerEntry()+0x33
#
# SIGSEGV (0xb) at pc=0x00007fed2c8eda63, pid=407269, tid=407270
#
# JRE version: (20.0) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-09-01-0715344.tobias..., mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x195ca63] AdapterHandlerEntry::~AdapterHandlerEntry()+0x33