8293487: [lworld] SIGSEGV with -XX:+VerifyAdapterSharing